# ssd-course-project-chore-tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  P02.md  PR map.md  README.md  data.chores.db  database.db  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  trivy-report.json
.github/: CODEOWNERS
.github/workflows/: auto-assign.yml  ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml  test.yml
EVIDENCE/P09/: sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P11/: zap_baseline.html  zap_baseline.json
EVIDENCE/P12/: checkov_report.json
adapters/: persistence.py
adapters/orm/: models.py
app/: chore.py  errors.py  main.py  test_requests.py  tet.py  user.py
app/middleware/: rate_limiter.py
data/: chores_tracker.db  test_db.sqlite
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
domain/: __init__.py  assigment.py  auth.py  chore.py  db.py  group.py  jwt.py  status.py  tracker.py  user.py
iac/: k8s.yaml  service.yaml
schemas/: assignment.py  chore.py  groupe.py  user.py
security/: .gitleaks.toml  checkov.yaml  hadolint.yaml  trivy.yaml
security/semgrep/: rules.yml
tests/: conftest.py  test_app_flow.py  test_crud_chores.py  test_errors.py  test_requests.py  test_tracker.py
