[tool.ruff]
line-length = 100
lint.select = ["E","F","W","I"]
target-version = "py311"
exclude = ["venv",".venv","build","dist"]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*import python_multipart.*:PendingDeprecationWarning",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
