[metadata]
name = ssd-course-project-chore-tracker
version = 0.1.0
description = Household chores tracker API
long_description = file: README.md
long_description_content_type = text/markdown
author = SecDev Team

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    fastapi==0.115.6
    uvicorn==0.30.5
    sqlalchemy
    sqlmodel~=0.0.25
    pydantic
    python-jose
    passlib
    bcrypt==4.2.0
    python-multipart

[options.packages.find]
include =
    app*
    adapters*
    domain*
    schemas*
exclude =
    tests*
    data*
